# esp-bootloader-plus

./: .gitlab-ci.yml  .gitmodules  LICENSE  README.md  README_CN.md
bootloader_custom_malloc/: CMakeLists.txt  bootloader_custom_malloc.c
bootloader_custom_malloc/include/: bootloader_custom_malloc.h
esp-xz/: CMakeLists.txt  Kconfig  README.md
esp-xz/apps/: esp_xz_decompressor.c
esp-xz/include/apps/: esp_xz_decompressor.h
esp-xz/ld/esp32c2/: linker.lf
esp-xz/ld/esp32c3/: linker.lf
esp-xz/port/include/: xz_config.h
esp-xz/xz-embedded/: .gitignore
esp-xz/xz-embedded/linux/include/linux/: xz.h
esp-xz/xz-embedded/linux/lib/xz/: xz_dec_stream.c
include/: bootloader_custom_ota.h
main/: CMakeLists.txt  Kconfig.projbuild  bootloader_custom_ota.c  bootloader_custom_utility.c  bootloader_custom_utility.h  bootloader_decompressor_common.c  bootloader_decompressor_common.h  bootloader_decompressor_none.c  bootloader_decompressor_none.h  bootloader_decompressor_xz.c  bootloader_decompressor_xz.h  bootloader_diff_ddelta.c  bootloader_diff_ddelta.h  bootloader_diff_none.c  bootloader_diff_none.h  bootloader_start.c  bootloader_storage_flash.c  bootloader_storage_flash.h  bootloader_storage_flash_diff.c  bootloader_storage_flash_diff.h
tools/: Makefile  custom_ota_gen.py  install_tools.sh
